# QtQuickQuests

./: CMakeLists.txt  README.md
assets/configuration/: qtquickcontrols2.conf
cmake/: qmlmodules.cmake
configuration/: qtquickcontrols2.conf
data/translations/: i18n_en.ts
modules/: CMakeLists.txt  Main.qml
modules/Basic/: CMakeLists.txt  Constants.qml  Theme.qml
modules/Components/: CMakeLists.txt
modules/Components/Cobot/: CMakeLists.txt  CobotScene.qml
src/: main.cc
